[project]
name = "teams-tunnel-pentest"
version = "0.1.0"
description = "Free bundle bypass toolkit for Teams/educational platform whitelisting"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.9",
    "httpx>=0.27",
    "pysocks>=1.7",
    "socksio>=1.0",
    "scapy>=2.5",
    "mitmproxy>=10.0",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
tunnel-test = "src.cli:main"
